tests/functional/lang/parse-fail-mixed-nested-attrs1.err
error: attribute 'x.z' already defined at «stdin»:2:3
       at «stdin»:3:16:
            2|   x.z = 3;
            3|   x = { y = 3; z = 3; };
             |                ^
            4| }
